Examples/pass/add.stella
language core;

extend with 
#natural-literals,
#fixpoint-combinator,
#multiparameter-functions,
#predecessor
;

fn my_pred

fn my_natural(n : Nat, m : Nat) -> Nat {
    return fix(fn (self : fn(Nat) -> Nat) {
        return fn (n : Nat) {
            return if Nat::iszero(n) then m else succ(self(Nat::pred(n)))
        } 
    })(n)
}

fn main(n : Nat) -> Nat {
    return add_natural(n, 5)
}
