Examples/fail/not-a-list-01.stella
language core;

fn produce_tuple(n : Nat) -> {} {
    return {}
}

fn main(n : Nat) -> Nat {
    return List::isempty(produce_tuple(n))
}
